# fdb-utils

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.archive_status  LICENSE  README.rst  pyproject.toml  sonar-project.properties
doc/: conf.py  index.rst  installation.rst  usage.rst
fdb_utils/: __main__.py  env.py  fdb_utils.py  fs_utils.py  grib_utils.py  main.py
fdb_utils/ci/: check_archive_status.py
fdb_utils/config/: service_settings.py  settings.yaml
fdb_utils/management/: wipe.py
fdb_utils/user/: describe.py
jenkins/: Jenkinsfile.archive_status_base  Jenkinsfile.status_ch1  Jenkinsfile.status_ch2
test/: conftest.py  test_check_archive_status.py  test_cli.py  test_fdb_describe.py  test_fdb_management.py  test_fdb_utils.py  test_fs_utils.py  test_grib_utils.py  test_user.py
test/resource/: config-template.yaml  schema
test/resource/data/: test.grib  v_ml.grib  v_pl.grib
